--- a/popup.html
+++ b/popup.html
@@ -4,25 +4,29 @@
         <meta charset="UTF-8">
         <title>Document</title>
         <script src="js/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap-table.js"> </script>
         <script src="js/popup.js"> </script>
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-table.css">
         <link rel="stylesheet" type="text/css" href="css/popup.css">
-        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     </head>
 <body>
     <div class="container">
-        <h3>download netease cloud music</h3>
-        <table class="table table-dark">
-            <thead>
-            <tr>
-                <th scope="col">封面</th>
-                <th scope="col">歌名</th>
-                <th scope="col">歌手</th>
-                <th scope="col">下载</th>
-            </tr>
-            </thead>
-            <tbody id="music">
-            </tbody>
-        </table>
+        <table id="table"></table>
+        <!--<table class="table table-hover">-->
+            <!--<thead>-->
+            <!--<tr>-->
+                <!--<th scope="col">封面</th>-->
+                <!--<th scope="col">歌名</th>-->
+                <!--<th scope="col">歌手</th>-->
+                <!--<th scope="col">下载</th>-->
+            <!--</tr>-->
+            <!--</thead>-->
+            <!--<tbody id="music">-->
+            <!--</tbody>-->
+        <!--</table>-->
         <!--<button class="btn btn-primary" id="get_music">get music</button>-->
     </div>
 </body>
