添加遮罩 改用axios

--- a/popup.html
+++ b/popup.html
@@ -37,9 +37,12 @@
         <!--<ul class="pagination pagination-sm" id="pagination">-->
         <!--</ul>-->
         <!--<button class="btn btn-primary" id="get_music">get music</button>-->
+        <div id="cover">
+            <img src="loading.gif">
+        </div>
     </div>
     <script src="js/vue.js"></script>
-    <script src="js/jquery.js"></script>
+    <script src="js/axios.js"></script>
     <script src="js/popup.js"> </script>
 </body>
 </html>
